--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 
 
 
-          <li class="list"><a class="list-item" href="#"> Twitter</a></li>
-          <li class="list"><a class="list-item" href="#">Zealy</a></li>
-            <li class="list"><a class="list-item" href="#">Discord</a></li>
+          <li class="list"><a class="list-item" target="_blank" href="https://twitter.com/AperimeNft"> Twitter</a></li>
+          <li class="list"><a class="list-item" target="_blank" href="https://zealy.io/c/aperime/questboard">Zealy</a></li>
+            <li class="list"><a class="list-item" target="_blank" href="https://discord.com/invite/2vy6ad9JYQ">Discord</a></li>
+            <li class="list"><a class="list-item" target="_blank" href="https://zealy.io/c/aperime/questboard">Collab Form</a></li>
          
             <!-- <div class="socials">
               <h3 class="twitter-icon" > Twitter</h3>
@@ -51,6 +52,10 @@
           <li class="list hide-on-mobile">
             <a class="list-item list-item-color" href="#">Roadmap</a>
           </li>
+          <li class="list"><a class="list-item list-item-color" target="_blank" href="https://twitter.com/AperimeNft"> Twitter</a></li>
+          <li class="list"><a class="list-item list-item-color" target="_blank" href="https://zealy.io/c/aperime/questboard">Zealy</a></li>
+            <li class="list"><a class="list-item list-item-color" target="_blank" href="https://discord.com/invite/2vy6ad9JYQ">Discord</a></li>
+            <li class="list"><a class="list-item list-item-color" target="_blank" href="https://zealy.io/c/aperime/questboard">Collab Form</a></li>
           <li class="list" id="showSiderbar">
             <a class="list-item list-item-color" href="#"><ion-icon class="menu-size" name="menu-outline"></ion-icon></a>
           </li>
