--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     <section class="section-three">
       <div class="container">
 
-        <h2 class="section-one-title" data-aos="zoom-out" data-aos-delay="1000" data-aos-once="true"  data-aos-duration="3000">What Makes Aperime Unquie?</h2>
+        <h2 class="section-one-title" data-aos="zoom-out"   data-aos-once="true"  data-aos-duration="500">What Makes Aperime Unquie?</h2>
         
         <div class="lockup">
 
@@ -297,7 +297,7 @@
 
   
     <section class="container"  data-aos="fade-up"
-    data-aos-anchor-placement="bottom-bottom" data-aos-once="true">
+      data-aos-anchor-placement="bottom-bottom" data-aos-once="true">
 
       <h1 class="section-one-title" > FAQ</h2> 
 
