--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
      <link rel="icon" href="img/ape logo.jpg">
      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+     <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
   </head>
   <body>
     <header>
