--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <!-- SIDEBAR -->
         <ul class="list-container side-bar">
           <li class="list">
-            <a class="list-item list-item-color"   id="hideSidebar" href="#"
+            <a class="list-item list-item-color"   id="hideSidebar"  
               ><ion-icon class="menu-color-close"  name="close-outline"></ion-icon></a
             >
           </li>
 
-          <li class="list"><a class="list-item" href="#">Home</a></li>
-          <li class="list"><a class="list-item" href="#">Roadmap</a></li>
+          <li class="list"><a class="list-item link-to" href="#home">Home</a></li>
+          <li class="list"><a class="list-item link-to" href="#roadmap">Roadmap</a></li>
           <li class="list"><a class="list-item" target="_blank" href="https://aperime.gitbook.io/aperimewhitepaper/economics/whitepaper">WhitePaper</a></li>
 
 
@@ -43,10 +43,10 @@
             <img class="logo" src="img/ape logo.jpg" alt="" />
           </li>
           <li class="list hide-on-mobile" data-aos="fade-down" data-aos-duration="2000">
-            <a class="list-item list-item-color-home" href="#">Home</a>
+            <a class="list-item list-item-color-home" href="#home">Home</a>
           </li>
           <li class="list hide-on-mobile" data-aos="fade-down" data-aos-duration="2000">
-            <a class="list-item list-item-color" href="#">Roadmap</a>
+            <a class="list-item list-item-color" href="#roadmap">Roadmap</a>
           </li>
           <div class="item list-item-socials-container" data-aos="fade-down" data-aos-duration="2000">
             <li class="list"><a class="list-item list-item-socials" target="_blank" href="https://twitter.com/AperimeNft"> Twitter</a></li>
@@ -61,7 +61,7 @@
         </ul>
       </nav>
 
-      <div class="intro container">
+      <div class="intro container" id="home">
         <!-- <h1 class="title">APERIME</h1> -->
         <span class="logo-title title"> APERIME </span>
         <p class="intro-paragraph">
@@ -87,7 +87,7 @@
     <hr>
 
 
-    <section class="section-one">
+    <section class="section-one" id="roadmap">
       <div class="container">
         <h2 class="section-one-title">Roadmap</h2>
 
