--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
        
 
         <a class="btn-buy" data-aos="fade-up"
-        data-aos-duration="3000" data-aos-once="true"  data-aos-anchor-placement="bottom-bottom" target="_blank" href="https://doggy.market/fiwb">MINT APERIME</a>
+        data-aos-duration="3000" data-aos-once="true"  data-aos-anchor-placement="bottom-bottom" target="_blank" href="https://drc-20.org/">MINT APERIME</a>
 
 
          
