--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
 
       <center>
 
-        <a href="https://doggy.market/rial" class="btn-buy" data-aos-once="true"   data-aos="flip-left" data-aos-delay="3000" target="_blank">buy rails</a>
+        <a href="https://doggy.market/rial" class="btn-buy"  target="_blank">Buy Rails - doggy market</a>
+
+        <a href="https://drc-20.org/drc20/rial" class="btn-buy"  target="_blank">Buy Rails - drc-20.rog</a>
       </center>
 
     </header>
@@ -223,7 +225,7 @@
     <li>DNNEZTZWTkkRp7o6YD2TDe17r5HmEEjBDf :  8.1%</li>
     <li>DQ5WVAPZR2bbTX78rzh6AYjpLPH2nLsGzQ : 7.7%</li>
     <li>DDM5PBsSo2d7of6d3z9WNPFM4GTKPbGYFF :  3.4%</li>
-    <li>	DULfvktJGeMfW6FMrRKdFH2JmDb9irFdC4 : 3.2%</li>
+    <li>DULfvktJGeMfW6FMrRKdFH2JmDb9irFdC4 : 3.2%</li>
     <li>D5YpTn58968HnfTpiyGayri1mo28JGkojV: 3.0%</li>
   </ul>
 
